# bangla-keyboard-mac

./: .gitignore  README.md  SECURITY.md
docs/: MAC-PARITY-TODO.md
macos/: README.md
macos/voice/: README.md  build.sh
macos/voice/Sources/: Audio.swift  Inject.swift  STT.swift  main.swift
src/keylayouts/: Bangla Unicode.keylayout
windows/: README.md  build-all.bat  build-all.sh
windows/engine/: CMakeLists.txt  README.md  demo.cpp  engine.h  klengine.h
windows/installer/: USAGE.txt  banglakeyboard.iss  register.bat  unregister.bat
windows/tray/: README.md  tray.cpp  tray.rc
windows/tsf/: CMakeLists.txt  Dll.cpp  Globals.h  README.md  TextService.cpp  TextService.h  loadtest.cpp
windows/voice/: stt_http.h  voice.html  voice.rc  voicehost.cpp  web-speech-test.html
